--- a/p1111_preferencefragment/src/main/res/xml/pref2.xml
+++ b/p1111_preferencefragment/src/main/res/xml/pref2.xml
@@ -23,7 +23,7 @@
     <PreferenceCategory
         android:title="@string/category2">
         <PreferenceScreen
-            android:fragment="ru.startandroid.develop.p1111preferencefragment.Fragment1"
+            android:fragment="ru.startandroid.p1111_preferencefragment.Fragment1"
             android:summary="@string/screen1_summary"
             android:title="@string/screen1_title">
         </PreferenceScreen>
