--- a/p1121_dynamicactionbar/src/main/res/menu/fragment2.xml
+++ b/p1121_dynamicactionbar/src/main/res/menu/fragment2.xml
@@ -7,4 +7,10 @@
         app:showAsAction="ifRoom|withText"
         android:title="@string/menu_item32">
     </item>
+    <item
+        android:id="@+id/frag3_item"
+        android:icon="@android:drawable/ic_dialog_alert"
+        app:showAsAction="ifRoom|withText"
+        android:title="@string/menu_item32">
+    </item>
 </menu>
