--- a/p1131_actionmode/src/main/res/layout/main.xml
+++ b/p1131_actionmode/src/main/res/layout/main.xml
@@ -6,11 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <Button
-        android:id="@+id/btnActionMode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="@string/action_mode">
-    </Button>
+    <ListView
+        android:id="@+id/lvActionMode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
 </LinearLayout>
