--- a/p1151_multiplescreen/src/main/res/layout/main.xml
+++ b/p1151_multiplescreen/src/main/res/layout/main.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal">
     <fragment
         android:id="@+id/titles"
-        android:name="ru.startandroid.develop.p1151multiplescreen.TitlesFragment"
+        android:name="ru.startandroid.p1151_multiplescreen.TitlesFragment"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1">
